# node-webcodecs-spec

./: .clang-format  .gitignore  .prettierignore  CLAUDE.md  CPPLINT.cfg  PROMPT-cpp-naming-refactor.md  TODO_PROGRESS.md  binding.gyp  lefthook.yml  mise.toml  package-lock.json  package.json  tsconfig.json  vitest.config.ts
.claude/: ralph-loop.local.md
.claude/agents/: ffmpeg-cpp-sentinel.md
.github/workflows/: build.yml
docs/: TOC.md  audit-report.md  n-api.md
docs/designs/: 02-codec-processing-model.md  03-audiodecoder-interface.md  07-configurations.md  08-encoded-media-interfaces-chunks.md  10-image-decoding.md  13-privacy-considerations.md  14-best-practices.md  15-error-types-reference.md  16-codec-state-machine.md  17-pixel-format-mapping.md  19-ffmpeg-implementation-notes.md
docs/handoffs/: soft-meandering-kahn-audiodecoder-async.md  soft-meandering-kahn-videodecoder-async.md
docs/plans/: 2026-01-01-generate-tasks-implementation.md  2026-01-01-generate-tasks-rewrite-design.md  2026-01-01-implement-missing-pieces.md  2026-01-01-napi-foundation-design.md  2026-01-01-simplify-task-system-design.md  2026-01-01-simplify-task-system-plan.md  2026-01-01-spec-context-generation-fix.md  2026-01-04-videoencoder-clone-documentation.md
docs/specs/: 01-definitions.md  02-codec-processing-model.md  03-audiodecoder-interface.md  04-videodecoder-interface.md  05-audioencoder-interface.md  06-videoencoder-interface.md  07-configurations.md  08-encoded-media-interfaces-chunks.md  09-raw-media-interfaces-part-1-of-4.md  09-raw-media-interfaces-part-2-of-4.md  09-raw-media-interfaces-part-3-of-4.md  09-raw-media-interfaces-part-4-of-4.md  1-definitions.md  10-image-decoding-part-1-of-2.md  10-image-decoding-part-2-of-2.md  11-resource-reclamation.md  12-security-considerations.md  13-privacy-considerations.md  14-best-practices-for-authors-using-webcodecs.md  15-acknowledgements.md  15-error-types-reference.md  16-codec-state-machine.md  17-pixel-format-mapping.md  18-codec-string-registry.md  19-ffmpeg-implementation-notes.md  20-audio-sample-format-mapping.md  TODO.md
docs/tasks/: AudioData.json  AudioData.md  AudioDecoder.json  AudioDecoder.md  AudioEncoder.json  AudioEncoder.md  EncodedAudioChunk.json  ImageTrack.md  (+17 more)
lib/: AudioData.ts  AudioDecoder.ts  AudioEncoder.ts  EncodedAudioChunk.ts  EncodedVideoChunk.ts  ImageDecoder.ts  ImageTrack.ts  ImageTrackList.ts  VideoColorSpace.ts  VideoDecoder.ts  VideoEncoder.ts  VideoFrame.ts  index.ts
scripts/: check-macos-abi.cjs  fetch-webcodecs-spec.ts  generate-issues.ts  generate-specs.ts  generate-tasks.test.ts  generate-tasks.ts  scaffold-project.ts  verify-types.ts
src/: AudioData.cpp  AudioData.h  AudioDecoder.cpp  AudioDecoder.h  AudioEncoder.cpp  AudioEncoder.h  EncodedAudioChunk.cpp  EncodedAudioChunk.h  EncodedVideoChunk.cpp  EncodedVideoChunk.h  ImageDecoder.cpp  ImageDecoder.h  ImageTrack.cpp  ImageTrack.h  ImageTrackList.cpp  ImageTrackList.h  VideoColorSpace.cpp  VideoColorSpace.h  VideoDecoder.cpp  VideoDecoder.h  VideoEncoder.cpp  VideoEncoder.h  VideoFrame.cpp  VideoFrame.h  addon.cpp  audio_data.cpp  audio_data.h  audio_decoder.cpp  audio_decoder.h  audio_encoder.cpp  audio_encoder.h  encoded_audio_chunk.cpp  encoded_audio_chunk.h  encoded_video_chunk.cpp  encoded_video_chunk.h  error_builder.h  ffmpeg_raii.h  image_decoder.cpp  image_decoder.h  image_decoder_worker.cpp  (+13 more)
test/: audio-data.test.ts  audio-decoder.test.ts  audio-encoder-integration.test.ts  audio-encoder.test.ts  image-decoder.test.ts  module-loading.test.ts  setup.ts  video-decoder.test.ts  video-encoder-integration.test.ts  video-encoder.test.ts  video-frame.test.ts
test/cpp/: CMakeLists.txt  test_buffer_utils.cpp  test_codec_registry.cpp  test_control_message_queue.cpp  test_ffmpeg_raii.cpp  test_frame_pool.cpp  test_main.cpp  test_naming_conventions.cpp  test_packet_pool.cpp  test_safe_tsfn.cpp  test_security_issues.cpp  test_timebase.cpp  test_video_decoder_spec.cpp
test/cpp/mocks/: mock_tsfn.h
types/: webcodecs.d.ts
(+202 files in other folders)
